force-app/main/default/objects/Asset__c/fields/ABS_Status__c.field-meta.xml
<CustomField>
    <fullName>ABS_Status__c</fullName>
    <label>ABS Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ABS Compliant</fullName>
            </value>
            <value>
                <fullName>TEBS Kit Compliant</fullName>
            </value>
            <value>
                <fullName>TEBS Connector Compliant</fullName>
            </value>
            <value>
                <fullName>Required - Incomplete</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
                <label>Vehicle has no ABS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>