force-app/main/default/objects/Asset__c/fields/ABS_TEBS__c.field-meta.xml
<CustomField>
    <fullName>ABS_TEBS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ABS/TEBS</label>
    <type>Checkbox</type>
</CustomField>