force-app/main/default/objects/Asset__c/fields/Admin_Review__c.field-meta.xml
<CustomField>
    <fullName>Admin_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Asset Administrator to review</description>
    <inlineHelpText>Asset Administrator to review</inlineHelpText>
    <label>Admin Review</label>
    <type>Checkbox</type>
</CustomField>