force-app/main/default/objects/Asset__c/fields/Asset_Family__c.field-meta.xml
<CustomField>
    <fullName>Asset_Family__c</fullName>
    <label>Asset Family</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Air Booster</fullName>
            </value>
            <value>
                <fullName>Air Compressor</fullName>
            </value>
            <value>
                <fullName>BHA Equipment</fullName>
            </value>
            <value>
                <fullName>Blooie Line</fullName>
            </value>
            <value>
                <fullName>Blooie Tank</fullName>
            </value>
            <value>
                <fullName>BOP Equipment</fullName>
            </value>
            <value>
                <fullName>Box Trailers</fullName>
            </value>
            <value>
                <fullName>Bucket</fullName>
            </value>
            <value>
                <fullName>Building/Infrastructure</fullName>
            </value>
            <value>
                <fullName>Catwalk Skid</fullName>
            </value>
            <value>
                <fullName>Catwalk Trailer</fullName>
            </value>
            <value>
                <fullName>Cement Blocks</fullName>
            </value>
            <value>
                <fullName>Choke Manifold</fullName>
            </value>
            <value>
                <fullName>Circulating Skid</fullName>
            </value>
            <value>
                <fullName>Combo Shack</fullName>
            </value>
            <value>
                <fullName>Communication Skid</fullName>
            </value>
            <value>
                <fullName>Container</fullName>
            </value>
            <value>
                <fullName>Cranes</fullName>
            </value>
            <value>
                <fullName>Desilting Unit</fullName>
            </value>
            <value>
                <fullName>Dollies</fullName>
            </value>
            <value>
                <fullName>Drilling Rig</fullName>
            </value>
            <value>
                <fullName>Drill Pipe</fullName>
            </value>
            <value>
                <fullName>Dropdeck</fullName>
            </value>
            <value>
                <fullName>Evaporative Fans</fullName>
            </value>
            <value>
                <fullName>Farming Equipment</fullName>
            </value>
            <value>
                <fullName>Filter Unit</fullName>
            </value>
            <value>
                <fullName>Flare Tank</fullName>
            </value>
            <value>
                <fullName>Flat Top</fullName>
            </value>
            <value>
                <fullName>Flexi-Drive (Transfer Pump)</fullName>
            </value>
            <value>
                <fullName>Flushby RIg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>