force-app/main/default/objects/Asset__c/fields/Asset_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Asset_ID_Number__c</fullName>
    <label>Asset ID Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>