force-app/main/default/objects/Asset__c/fields/Asset_Owner__c.field-meta.xml
<CustomField>
    <fullName>Asset_Owner__c</fullName>
    <label>Asset Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wild Desert</fullName>
            </value>
            <value>
                <fullName>3rd Party</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>