force-app/main/default/objects/Asset__c/fields/Asset_Picture__c.field-meta.xml
<CustomField>
    <fullName>Asset_Picture__c</fullName>
    <label>Asset Picture</label>
    <length>15000</length>
    <type>Html</type>
</CustomField>