force-app/main/default/objects/Asset__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>Asset&apos;s Assigned</relationshipLabel>
    <relationshipName>WD_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>