force-app/main/default/objects/Asset__c/fields/ATO__c.field-meta.xml
<CustomField>
    <fullName>ATO__c</fullName>
    <inlineHelpText>Authority to Operate Number is the number from Qld TMR to allow the vehicle to have permits.</inlineHelpText>
    <label>ATO #</label>
    <length>30</length>
    <type>Text</type>
</CustomField>