force-app/main/default/objects/Asset__c/fields/Brake_System_Type__c.field-meta.xml
<CustomField>
    <fullName>Brake_System_Type__c</fullName>
    <label>Brake System Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ABS with ESC</fullName>
            </value>
            <value>
                <fullName>T-EBS with ABS</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>