force-app/main/default/objects/Asset__c/fields/Certificate_Attached__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certificate Attached</label>
    <type>Checkbox</type>
</CustomField>