force-app/main/default/objects/Asset__c/fields/Certificate_Number__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Number__c</fullName>
    <label>Certificate Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>