force-app/main/default/objects/Asset__c/fields/Connection_Type__c.field-meta.xml
<CustomField>
    <fullName>Connection_Type__c</fullName>
    <label>Connection Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Asset_Family__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>602 BUTT WELD</fullName>
            </value>
            <value>
                <fullName>200 NPT SCREWED</fullName>
            </value>
            <value>
                <fullName>TABLE E, WELDED FLANGE</fullName>
            </value>
            <value>
                <fullName>602 NPT SCREWED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>