force-app/main/default/objects/Asset__c/fields/Current_Odometer_Reading__c.field-meta.xml
<CustomField>
    <fullName>Current_Odometer_Reading__c</fullName>
    <label>Current Odometer Reading</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>