force-app/main/default/objects/Asset__c/fields/Current_Site__c.field-meta.xml
<CustomField>
    <fullName>Current_Site__c</fullName>
    <formula>Unit__r.Site__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Site</label>
    <type>Text</type>
</CustomField>