force-app/main/default/objects/Asset__c/fields/Daily_Pre_Start_for_the_Day__c.field-meta.xml
<CustomField>
    <fullName>Daily_Pre_Start_for_the_Day__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Daily Pre-Start for the Day Completed</label>
    <type>Checkbox</type>
</CustomField>