force-app/main/default/objects/Asset__c/fields/Date_In_Service__c.field-meta.xml
<CustomField>
    <fullName>Date_In_Service__c</fullName>
    <label>Date In Service</label>
    <type>Date</type>
</CustomField>