force-app/main/default/objects/Asset__c/fields/Date_OD_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Date_OD_Last_Updated__c</fullName>
    <inlineHelpText>Updated whenever the Current Odometer Reading is changed</inlineHelpText>
    <label>Date OD Last Updated</label>
    <type>Date</type>
</CustomField>