force-app/main/default/objects/Asset__c/fields/Date_Of_Last_Service__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Last_Service__c</fullName>
    <label>Date of Last Service</label>
    <type>Date</type>
</CustomField>