force-app/main/default/objects/Asset__c/fields/Date_REGO_Paid__c.field-meta.xml
<CustomField>
    <fullName>Date_REGO_Paid__c</fullName>
    <label>Date REGO Paid</label>
    <type>Date</type>
</CustomField>