force-app/main/default/objects/Asset__c/fields/Date_Stacked__c.field-meta.xml
<CustomField>
    <fullName>Date_Stacked__c</fullName>
    <label>Date Stacked</label>
    <type>Date</type>
</CustomField>