force-app/main/default/objects/Asset__c/fields/Days_to_rego_expiry__c.field-meta.xml
<CustomField>
    <fullName>Days_to_rego_expiry__c</fullName>
    <description>Days Until Rego Expires</description>
    <formula>Rego_Expiry_Date__c - TODAY()</formula>
    <inlineHelpText>How many days are left until the rego is due to expire.</inlineHelpText>
    <label>Days To Rego Expiry</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>