force-app/main/default/objects/Asset__c/fields/Days_To_Roadworthy_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Days_To_Roadworthy_Expiry__c</fullName>
    <formula>Next_Annual_Roadworthy__c  - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days To Roadworthy Expiry</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>