force-app/main/default/objects/Asset__c/fields/Daytime_Running_Lights__c.field-meta.xml
<CustomField>
    <fullName>Daytime_Running_Lights__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Daytime Running Lights</label>
    <type>Checkbox</type>
</CustomField>