force-app/main/default/objects/Asset__c/fields/Dimensions__c.field-meta.xml
<CustomField>
    <fullName>Dimensions__c</fullName>
    <inlineHelpText>EG: Length / Height / Width</inlineHelpText>
    <label>Dimensions</label>
    <type>TextArea</type>
</CustomField>