force-app/main/default/objects/Asset__c/fields/Disposal_Date__c.field-meta.xml
<CustomField>
    <fullName>Disposal_Date__c</fullName>
    <label>Disposal Date</label>
    <type>Date</type>
</CustomField>