force-app/main/default/objects/Asset__c/fields/Do_Not_Create_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Create_Work_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Create Work Order</label>
    <type>Checkbox</type>
</CustomField>