force-app/main/default/objects/Asset__c/fields/Door_Alarm__c.field-meta.xml
<CustomField>
    <fullName>Door_Alarm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Door Alarm</label>
    <type>Checkbox</type>
</CustomField>