force-app/main/default/objects/Asset__c/fields/Engine_Model__c.field-meta.xml
<CustomField>
    <fullName>Engine_Model__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parts - Engine Model</label>
    <referenceTo>Engines__c</referenceTo>
    <relationshipLabel>WD Assets</relationshipLabel>
    <relationshipName>WD_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>