force-app/main/default/objects/Asset__c/fields/Engine_Type__c.field-meta.xml
<CustomField>
    <fullName>Engine_Type__c</fullName>
    <label>Engine Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3406E</fullName>
            </value>
            <value>
                <fullName>Big Cam 3</fullName>
            </value>
            <value>
                <fullName>Big Cam 4</fullName>
            </value>
            <value>
                <fullName>CAT 11</fullName>
            </value>
            <value>
                <fullName>CAT 13</fullName>
            </value>
            <value>
                <fullName>CAT 15</fullName>
            </value>
            <value>
                <fullName>CAT 15 ACERT</fullName>
            </value>
            <value>
                <fullName>CAT 16</fullName>
            </value>
            <value>
                <fullName>CAT 18</fullName>
            </value>
            <value>
                <fullName>CAT 2.2</fullName>
            </value>
            <value>
                <fullName>CAT 3306</fullName>
            </value>
            <value>
                <fullName>CAT 3406C</fullName>
            </value>
            <value>
                <fullName>CAT 4.4</fullName>
            </value>
            <value>
                <fullName>CAT 4.4 ACERT</fullName>
            </value>
            <value>
                <fullName>CAT 6.6</fullName>
            </value>
            <value>
                <fullName>CAT 7.1</fullName>
            </value>
            <value>
                <fullName>CAT 9</fullName>
            </value>
            <value>
                <fullName>CAT Perkins 1104A-44TG2</fullName>
            </value>
            <value>
                <fullName>CAT Perkins 1106C-E66TAG2</fullName>
            </value>
            <value>
                <fullName>CAT Perkins 404C-22G2</fullName>
            </value>
            <value>
                <fullName>Cummins</fullName>
            </value>
            <value>
                <fullName>Cummins 4B3.9-G2</fullName>
            </value>
            <value>
                <fullName>Cummins 6CTA8.3-G2</fullName>
            </value>
            <value>
                <fullName>E7</fullName>
            </value>
            <value>
                <fullName>E9</fullName>
            </value>
            <value>
                <fullName>ISX EGR</fullName>
            </value>
            <value>
                <fullName>MP10</fullName>
            </value>
            <value>
                <fullName>N14</fullName>
            </value>
            <value>
                <fullName>SERIES 60</fullName>
            </value>
            <value>
                <fullName>X15</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>