force-app/main/default/objects/Asset__c/fields/Entry_Date__c.field-meta.xml
<CustomField>
    <fullName>Entry_Date__c</fullName>
    <inlineHelpText>Entry Date to NHVAS</inlineHelpText>
    <label>Entry Date</label>
    <type>Date</type>
</CustomField>