force-app/main/default/objects/Asset__c/fields/Exit_Date__c.field-meta.xml
<CustomField>
    <fullName>Exit_Date__c</fullName>
    <inlineHelpText>Date Exited NHVAS</inlineHelpText>
    <label>Exit Date</label>
    <type>Date</type>
</CustomField>