force-app/main/default/objects/Asset__c/fields/Fault_Report_Book__c.field-meta.xml
<CustomField>
    <fullName>Fault_Report_Book__c</fullName>
    <inlineHelpText>All trucks must have a Fault Report Book for drivers to report any faults discovered</inlineHelpText>
    <label>Fault Report Book #</label>
    <length>30</length>
    <type>Text</type>
</CustomField>