force-app/main/default/objects/Asset__c/fields/Finance_Notes__c.field-meta.xml
<CustomField>
    <fullName>Finance_Notes__c</fullName>
    <inlineHelpText>Like date of Direct Debit monthly or Balloon payout etc</inlineHelpText>
    <label>Finance Notes</label>
    <type>TextArea</type>
</CustomField>