force-app/main/default/objects/Asset__c/fields/Financier__c.field-meta.xml
<CustomField>
    <fullName>Financier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Assets Under Finance</relationshipLabel>
    <relationshipName>WD_Assets2</relationshipName>
    <type>Lookup</type>
</CustomField>