force-app/main/default/objects/Asset__c/fields/GCM__c.field-meta.xml
<CustomField>
    <fullName>GCM__c</fullName>
    <inlineHelpText>Gross Combination Mass - is the maximum allowable combined mass of a towing road vehicle, passengers and cargo in the tow vehicle, plus the mass of the trailer and cargo in the trailer.</inlineHelpText>
    <label>GCM</label>
    <length>10</length>
    <type>Text</type>
</CustomField>