force-app/main/default/objects/Asset__c/fields/GeoTab__c.field-meta.xml
<CustomField>
    <fullName>GeoTab__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Vehicle Monitoring System</description>
    <inlineHelpText>Check if installed in vehicle</inlineHelpText>
    <label>GeoTab</label>
    <type>Checkbox</type>
</CustomField>