force-app/main/default/objects/Asset__c/fields/GeoTab_Serial_No__c.field-meta.xml
<CustomField>
    <fullName>GeoTab_Serial_No__c</fullName>
    <description>Serial number from Geotab device</description>
    <label>GeoTab - Serial No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>