force-app/main/default/objects/Asset__c/fields/Guardian__c.field-meta.xml
<CustomField>
    <fullName>Guardian__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Vehicle Monitoring System</description>
    <inlineHelpText>Check if installed in vehicle</inlineHelpText>
    <label>Guardian</label>
    <type>Checkbox</type>
</CustomField>