force-app/main/default/objects/Asset__c/fields/Guardian_ID__c.field-meta.xml
<CustomField>
    <fullName>Guardian_ID__c</fullName>
    <description>The internal unique identifier associated with this asset. Quote this ID when requesting support.</description>
    <label>Guardian - ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>