force-app/main/default/objects/Asset__c/fields/Guardian_Serial_No__c.field-meta.xml
<CustomField>
    <fullName>Guardian_Serial_No__c</fullName>
    <description>Serial number for Guardian Unit</description>
    <label>Guardian - Serial No</label>
    <length>30</length>
    <type>Text</type>
</CustomField>