force-app/main/default/objects/Asset__c/fields/Guardian_Sim_No__c.field-meta.xml
<CustomField>
    <fullName>Guardian_Sim_No__c</fullName>
    <description>Sim number for device sim card</description>
    <inlineHelpText>Sim number for device sim card</inlineHelpText>
    <label>Guardian - Sim No</label>
    <length>30</length>
    <type>Text</type>
</CustomField>