force-app/main/default/objects/Asset__c/fields/GVM__c.field-meta.xml
<CustomField>
    <fullName>GVM__c</fullName>
    <inlineHelpText>Gross Vehicle Mass</inlineHelpText>
    <label>GVM</label>
    <length>10</length>
    <type>Text</type>
</CustomField>