force-app/main/default/objects/Asset__c/fields/Inspection_ID__c.field-meta.xml
<CustomField>
    <fullName>Inspection_ID__c</fullName>
    <label>Inspection ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>