force-app/main/default/objects/Asset__c/fields/Insured_By__c.field-meta.xml
<CustomField>
    <fullName>Insured_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insured By</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Assets Insured</relationshipLabel>
    <relationshipName>WD_Assets3</relationshipName>
    <type>Lookup</type>
</CustomField>