force-app/main/default/objects/Asset__c/fields/Insured_Sum__c.field-meta.xml
<CustomField>
    <fullName>Insured_Sum__c</fullName>
    <label>Insured Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>