force-app/main/default/objects/Asset__c/fields/Interval__c.field-meta.xml
<CustomField>
    <fullName>Interval__c</fullName>
    <label>Maintenance Interval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>6mths</fullName>
            </value>
            <value>
                <fullName>12mths</fullName>
            </value>
            <value>
                <fullName>24mths</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>