force-app/main/default/objects/Asset__c/fields/Inventory_Item__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Item__c</fullName>
    <label>Asset Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EquipListContract</fullName>
                <default>true</default>
                <label>Equip List (Contract)</label>
            </value>
            <value>
                <fullName>Additional_(QA)</fullName>
                <label>Additional (QA)</label>
            </value>
            <value>
                <fullName>Stacked</fullName>
            </value>
            <value>
                <fullName>Obsolete</fullName>
            </value>
            <value>
                <fullName>Rural</fullName>
            </value>
            <value>
                <fullName>3rd Party Equip (Billable)</fullName>
            </value>
            <value>
                <fullName>3rd Party Equip (Non-Billable)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>