force-app/main/default/objects/Asset__c/fields/Km_Until_Next_Service__c.field-meta.xml
<CustomField>
    <fullName>Km_Until_Next_Service__c</fullName>
    <formula>Current_Odometer_Reading__c  -  Last_Service_Km__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Km Until Next Service</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>