force-app/main/default/objects/Asset__c/fields/Last_Annual_Roadworthy__c.field-meta.xml
<CustomField>
    <fullName>Last_Annual_Roadworthy__c</fullName>
    <label>Date of Last Annual Roadworthy</label>
    <type>Date</type>
</CustomField>