force-app/main/default/objects/Asset__c/fields/Last_Service_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Last_Service_Hrs__c</fullName>
    <label>Last Service Hrs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>