force-app/main/default/objects/Asset__c/fields/Last_Service_Km__c.field-meta.xml
<CustomField>
    <fullName>Last_Service_Km__c</fullName>
    <label>Last Service Km</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>