force-app/main/default/objects/Asset__c/fields/Last_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Last_Service_Type__c</fullName>
    <label>Last Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A Service</fullName>
            </value>
            <value>
                <fullName>B Service</fullName>
            </value>
            <value>
                <fullName>C Service</fullName>
            </value>
            <value>
                <fullName>Type 1 - 250Hrs</fullName>
            </value>
            <value>
                <fullName>Type 2 - 500Hrs</fullName>
            </value>
            <value>
                <fullName>Type 3 - 1000Hrs</fullName>
            </value>
            <value>
                <fullName>Type 4 - 2000Hrs</fullName>
            </value>
            <value>
                <fullName>10&apos;000km Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>