force-app/main/default/objects/Asset__c/fields/Last_Test_Tag_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Test_Tag_Date__c</fullName>
    <label>Last Test &amp; Tag Date</label>
    <type>Date</type>
</CustomField>