force-app/main/default/objects/Asset__c/fields/Loan_Payout_Date__c.field-meta.xml
<CustomField>
    <fullName>Loan_Payout_Date__c</fullName>
    <label>Loan Payout Date</label>
    <type>Date</type>
</CustomField>