force-app/main/default/objects/Asset__c/fields/Low_Km_Asset__c.field-meta.xml
<CustomField>
    <fullName>Low_Km_Asset__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Low Km Asset</label>
    <type>Checkbox</type>
</CustomField>