force-app/main/default/objects/Asset__c/fields/Maintenance_Required__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Maintenance Required</label>
    <type>Checkbox</type>
</CustomField>