force-app/main/default/objects/Asset__c/fields/Maintenancedocs__c.field-meta.xml
<CustomField>
    <fullName>Maintenancedocs__c</fullName>
    <label>Maintenance Docs</label>
    <type>TextArea</type>
</CustomField>