force-app/main/default/objects/Asset__c/fields/Max_Wind_Load__c.field-meta.xml
<CustomField>
    <fullName>Max_Wind_Load__c</fullName>
    <inlineHelpText>The maximum acceptable wind speed for operating.</inlineHelpText>
    <label>Max. Wind Load</label>
    <length>30</length>
    <type>Text</type>
</CustomField>