force-app/main/default/objects/Asset__c/fields/Monthly_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Payment_Amount__c</fullName>
    <label>Monthly Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>