force-app/main/default/objects/Asset__c/fields/MS_Office_Version__c.field-meta.xml
<CustomField>
    <fullName>MS_Office_Version__c</fullName>
    <label>MS Office Version</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Office 2003</fullName>
            </value>
            <value>
                <fullName>Office 2007</fullName>
            </value>
            <value>
                <fullName>Office 2010</fullName>
            </value>
            <value>
                <fullName>Office 2013</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>