force-app/main/default/objects/Asset__c/fields/Name_and_Rego_Number__c.field-meta.xml
<CustomField>
    <fullName>Name_and_Rego_Number__c</fullName>
    <formula>IF(ISBLANK(Registration_Number__c), Name , Name + &apos; (&apos; +  Registration_Number__c  + &apos;)&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name and Rego Number</label>
    <type>Text</type>
</CustomField>