force-app/main/default/objects/Asset__c/fields/Navman_ID_No__c.field-meta.xml
<CustomField>
    <fullName>Navman_ID_No__c</fullName>
    <label>Navman ID No:</label>
    <length>30</length>
    <type>Text</type>
</CustomField>