force-app/main/default/objects/Asset__c/fields/NDT_Docs__c.field-meta.xml
<CustomField>
    <fullName>NDT_Docs__c</fullName>
    <label>NDT Docs</label>
    <type>TextArea</type>
</CustomField>