force-app/main/default/objects/Asset__c/fields/NDT_Inspection_Date__c.field-meta.xml
<CustomField>
    <fullName>NDT_Inspection_Date__c</fullName>
    <label>Last NDT</label>
    <type>Date</type>
</CustomField>