force-app/main/default/objects/Asset__c/fields/NDT_Interval__c.field-meta.xml
<CustomField>
    <fullName>NDT_Interval__c</fullName>
    <label>NDT Interval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>6 mthly (CIII)</fullName>
            </value>
            <value>
                <fullName>12 mthly CIV)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>