force-app/main/default/objects/Asset__c/fields/NDT_Required__c.field-meta.xml
<CustomField>
    <fullName>NDT_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NDT Required (Unit Op Hrs)</label>
    <type>Checkbox</type>
</CustomField>