force-app/main/default/objects/Asset__c/fields/NDT_Required_Interval__c.field-meta.xml
<CustomField>
    <fullName>NDT_Required_Interval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NDT Required (Interval)</label>
    <type>Checkbox</type>
</CustomField>