force-app/main/default/objects/Asset__c/fields/Next_Annual_Roadworthy__c.field-meta.xml
<CustomField>
    <fullName>Next_Annual_Roadworthy__c</fullName>
    <label>Date of Next Annual Roadworthy</label>
    <type>Date</type>
</CustomField>