force-app/main/default/objects/Asset__c/fields/Next_Job_Card_creation_reading__c.field-meta.xml
<CustomField>
    <fullName>Next_Job_Card_creation_reading__c</fullName>
    <label>Next Job Card creation reading</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>