force-app/main/default/objects/Asset__c/fields/Next_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Next_Maintenance__c</fullName>
    <label>Next Maintenance</label>
    <type>Date</type>
</CustomField>