force-app/main/default/objects/Asset__c/fields/Next_NDT__c.field-meta.xml
<CustomField>
    <fullName>Next_NDT__c</fullName>
    <label>Next NDT</label>
    <type>Date</type>
</CustomField>