force-app/main/default/objects/Asset__c/fields/Next_Service_Due_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Next_Service_Due_Hrs__c</fullName>
    <label>Next Service Due - Hrs</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>