force-app/main/default/objects/Asset__c/fields/Next_Service_Due_km__c.field-meta.xml
<CustomField>
    <fullName>Next_Service_Due_km__c</fullName>
    <label>Next Service Due km</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>