force-app/main/default/objects/Asset__c/fields/Next_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Next_Service_Type__c</fullName>
    <label>Next Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>B Service</fullName>
            </value>
            <value>
                <fullName>C Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>